@@ -68,20 +68,21 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,135,162,50,14
 END
 
-IDD_SOUNDDIALOG DIALOGEX 0, 0, 515, 162
+IDD_SOUNDDIALOG DIALOGEX 0, 0, 515, 172
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Sound Manager"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,458,141,50,14
-    CONTROL         "List1",201,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_SORTASCENDING | LVS_EDITLABELS | WS_BORDER | WS_TABSTOP,7,7,443,148
+    DEFPUSHBUTTON   "OK",IDOK,458,152,50,14
+    CONTROL         "List1",201,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_SORTASCENDING | LVS_EDITLABELS | WS_BORDER | WS_TABSTOP,7,7,443,159
     PUSHBUTTON      "&Import",IDC_IMPORT,458,7,50,14
     PUSHBUTTON      "&Reimport",IDC_REIMPORT,458,25,50,14
     PUSHBUTTON      "Reimport &From",IDC_REIMPORTFROM,458,43,50,14
     PUSHBUTTON      "&Delete",IDC_DELETE,458,61,50,14
     PUSHBUTTON      "&Rename",IDC_RENAME,458,79,50,14
-    PUSHBUTTON      "&Play",IDC_PLAY,458,98,50,14
-    PUSHBUTTON      "&Export",IDC_SNDEXPORT,458,118,50,14
+    PUSHBUTTON      "&Play",IDC_PLAY,458,96,50,14
+    PUSHBUTTON      "&Export",IDC_SNDEXPORT,458,114,50,14
+    PUSHBUTTON      "To &BG Out",IDC_SNDTOBG,458,131,50,14
 END
 
 IDD_IMAGEDIALOG DIALOGEX 0, 0, 514, 172
@@ -484,7 +485,7 @@ BEGIN
     LTEXT           "Y",IDC_STATIC,37,28,8,10
 END
 
-IDD_AUDIO_OPTIONS DIALOGEX 0, 0, 185, 200
+IDD_AUDIO_OPTIONS DIALOGEX 0, 0, 354, 200
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Audio Options"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
@@ -493,12 +494,14 @@ BEGIN
     CONTROL         "Slider1",IDC_MUSIC_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,9,49,110,18
     CONTROL         "P&lay Sounds",IDC_PLAY_SOUND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,84,55,10
     CONTROL         "Slider1",IDC_SOUND_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,7,113,110,18
-    LTEXT           "Output Sound Device (Needs restart of Visual Pinball)",IDC_STATIC_SOUNDDEVICE,7,140,170,10
-    LISTBOX         IDC_SoundList,7,153,170,40,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    DEFPUSHBUTTON   "OK",IDOK,128,7,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,128,24,50,14
+    LTEXT           "Output Sound Device (Needs restart of Visual Pinball)",IDC_STATIC_SOUNDDEVICE,172,22,170,10
+    LISTBOX         IDC_SoundList,172,35,170,40,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    DEFPUSHBUTTON   "OK",IDOK,108,176,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,161,176,50,14
     LTEXT           "&Music Volume",IDC_STATIC_MUSIC,42,36,45,8
     LTEXT           "&Sound Volume",IDC_STATIC_SOUND,39,99,47,8
+    LTEXT           "Backglass Sound Device (Needs restart)",IDC_STATIC_SOUNDDEVICE2,171,96,170,10
+    LISTBOX         IDC_SoundListBG,171,109,170,40,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_PHYSICS_OPTIONS DIALOGEX 0, 0, 200, 300
